# bazel-monorepo

./: README.md  WORKSPACE.bazel
.github/workflows/: main.yml
documentation/: 1_GETTING-STARTED.md  2_PYTHON-WITH-BAZEL.md
projects/calculator/: BUILD.bazel  calculator_test.py
projects/flask-app/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
